[package]
name = "backitup"
description = "Stupidly simple crate for backing up files and directories"
license = "MIT"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Ladme/backitup"
readme = "README.md"
keywords = ["backup", "back-up", "utility"]
categories = ["filesystem"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"